<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.pruebas.manejomemoria.MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/size_titulo"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"/>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"/>

    <Button
        android:id="@+id/btnGuardarPreferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar_preferencia"
        android:onClick="guardarPreferencia"/>

    <Button
        android:id="@+id/btnMostrarPreferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_mostrar_preferencia"
        android:onClick="mostrarPreferencia"/>

    <Button
        android:id="@+id/btnguardarArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar"
        android:onClick="generarArchivo"/>

    <TextView
        android:id="@+id/txtPreferencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

</LinearLayout>
